NewArchive/748c2d145e171b4c781cfeb043703cfc-862de6335e18fd7902bf2c42ffee0752/output
+ g++-4.8 -std=c++11 main.cpp -o main
main.cpp:7:11: error: ‘size_t’ in namespace ‘std’ does not name a type
   typedef std::size_t size_type;
           ^
main.cpp:11:3: error: ‘GLM_FUNC_DECL’ does not name a type
   GLM_FUNC_DECL GLM_CONSTEXPR size_type length() const;
   ^
main.cpp:34:4: error: expected ‘}’ at end of input
   };
    ^
main.cpp:34:4: error: expected unqualified-id at end of input
